--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 "info":"Satoshi နဲ့ Yui တို့မောင်နှမနှစ်ယောက်ကိုအဖေဆုံးသွားပီးတဲ့နောက် အမေတစ်ယောက်တည်းရှာကျွေးရပါတယ်.ဒီလိုနဲ့တစ်နေ့မှာအမေကနောက်ယောကျာ်းယူပီးအိမ်မှာလာနေပါတော့တယ်.နောက်ယောကျာ်းကတော့ Satoshi နဲ့ Yui တို့မောင်နှစ်မနှစ်ယောက်ကိုဘယ်လိုပညာပြမလဲဆိုတာကိုတော့..",
 "watch":"",
 "download":"https://www.mediafire.com/file/s3kvfv6o8dp3yjq/%255BDark_TV_2.0%255DMIAA_146%257EHD.mp4/file",
-"photo1":"https://pics.r18.com/digital/video/miaa00146/miaa00146ps.jpg",
+"photo1":"https://ibb.co/QFy7Kqy",
 "photo2":"https://pics.r18.com/digital/video/miaa00146/miaa00146pl.jpg",
 "photo3":"https://pics.r18.com/digital/video/miaa00146/miaa00146jp-10.jpg",
 "photo4":"https://pics.r18.com/digital/video/miaa00146/miaa00146jp-3.jpg",
